JLox: Chapter 8 - statements